# adventofcode-2025

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  utils.rs
