[package]
name = "adventofcode-2025"
version = "0.1.12"
edition = "2021"
default-run = "adventofcode-2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sscanf = "0.4.2"
itertools = "0.13.0"
hashbrown = "0.15.2"
fnv = "1.0.7"
indexmap = "2.7.0"
regex = "1.11.1"
num = "0.4.3"
nalgebra = "0.33.2"
grid = "0.15.0"
priority-queue = "2.1.1"
serde_json = "1.0.133"
rayon = "1.10.0"
cached = "0.54.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["blocking"] }
clap = { version = "4.5.21", features = ["derive"] }
dashmap = "6.1.0"
